# saudi-road-safety-mlops

./: .gitignore  HANDOFF.md  Makefile  PUSH.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/processed/: causes_trend.csv  national_forecast.csv  national_trend.csv  regional_clusters.csv  regional_panel.csv  regional_panel_long.csv  regional_risk.csv  traffic_anomalies.csv  traffic_monthly.csv
docs/: README.ar.md
notebooks/: 01_eda.ipynb  02_forecasting.ipynb  03_regional_risk.ipynb  04_anomaly.ipynb  05_clustering.ipynb
src/data/: build_panel.py
tests/: test_panel.py
