[project]
name = "saudi-road-safety-mlops"
version = "0.1.0"
description = "Saudi Road Safety Analytics Platform — exposure-adjusted risk intelligence and Vision 2030 forecasting"
readme = "README.md"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
